[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aihub-client"
version = "1.0.0"
description = "AI-Hub API 클라이언트 및 MCP 서버"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI-Hub Client Team", email = "your-email@example.com"}
]
maintainers = [
    {name = "AI-Hub Client Team", email = "your-email@example.com"}
]
keywords = ["ai-hub", "api", "client", "mcp", "server", "dataset", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "typing-extensions>=4.0.0",
    "tqdm>=4.62.0",
    "structlog>=21.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "pytest-cov>=2.12",
]

[project.urls]
Homepage = "https://github.com/your-username/aihub_mcp_test"
Repository = "https://github.com/your-username/aihub_mcp_test"
Documentation = "https://github.com/your-username/aihub_mcp_test#readme"
"Bug Reports" = "https://github.com/your-username/aihub_mcp_test/issues"
Changelog = "https://github.com/your-username/aihub_mcp_test/releases"

[project.scripts]
aihub-cli = "aihub_dataset_query:main"
aihub-mcp-server = "aihub_mcp_server:main"
aihub-example = "example_usage:main"

[tool.setuptools]
py-modules = ["aihub_client", "aihub_dataset_query", "aihub_mcp_server", "example_usage"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.bat"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["aihub_client", "aihub_dataset_query", "aihub_mcp_server"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 